--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Portfolio</title>
 </head>
 
-<body class="" style="background-image: url('../assets/img/Vector.png'); backdrop-filter: blur(13px);">
-    <div class="wraper">
+<body>
+    <div class="wraper" style="background-image: url('../assets/img/Vector.png'); backdrop-filter: blur(13px);">
         <header class="w-full lg:sticky">
             <div class="container mx-auto">
                 <nav class="">
