--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Portfolio</title>
 </head>
 
-<body>
-    <div class="wraper" style="background-image: url('../assets/img/Vector.png'); backdrop-filter: blur(13px);">
+<body  class="bg-[url('/assets/img/Vector.png')] backdrop-blur-md ">
+    <div class="wraper">
         <header class="w-full lg:sticky">
             <div class="container mx-auto">
                 <nav class="">
