--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portfolio</title>
 </head>
 
-<body class="bg-[url('/img/Vector.png')] backdrop-blur-md">
+<body class="bg-[url('./Vector.png')] backdrop-blur-md">
     <div class="wraper">
         <header class="w-full lg:sticky">
             <div class="container mx-auto">
