--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                         <div data-aos="zoom-out-left"
                             class="group relative overflow-hidden rounded-xl bg-neutral-800 border border-neutral-700 hover:border-orange-500 transition-all duration-300 hover:shadow-2xl hover:shadow-orange-500/10">
                             <div class="relative overflow-hidden">
-                                <img src="assets/img/433772949-0137e378-9d71-4a24-a669-4851bc40cf97.png"
+                                <img src="assets/img/emoji.png"
                                     alt="Stationery Store Project"
                                     class="w-full h-64 object-cover transform transition-transform duration-500 group-hover:scale-105">
                                 <div
@@ -495,7 +495,7 @@
                                         CSS</span>
                                 </div>
 
-                                <a href="https://shop-virgools.vercel.app/" target="_blank"
+                                <a href="https://alisabouri68.github.io/emoji-paralax/" target="_blank"
                                     class="flex items-center justify-center w-full px-4 py-2 text-sm font-medium text-white bg-orange-600 hover:bg-orange-700 rounded-lg transition-all duration-300 group/link">
                                     <div>View the project </div>
                                     <div>
