--- a/index.html
+++ b/index.html
@@ -472,27 +472,29 @@
                         <div data-aos="zoom-out-left"
                             class="group relative overflow-hidden rounded-xl bg-neutral-800 border border-neutral-700 hover:border-orange-500 transition-all duration-300 hover:shadow-2xl hover:shadow-orange-500/10">
                             <div class="relative overflow-hidden">
-                                <img src="assets/img/emoji.png"
-                                    alt="Stationery Store Project"
+                                <img src="assets/img/emoji.png" alt="Stationery Store Project"
                                     class="w-full h-64 object-cover transform transition-transform duration-500 group-hover:scale-105">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-t from-orange-500/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end p-6">
-                                    <span class="text-white text-lg font-semibold">Stationery Store</span>
+                                    <span class="text-white text-lg font-semibold">SERIOUS.BUSINESS
+                                    </span>
                                 </div>
                             </div>
 
                             <div class="p-6">
-                                <h4 class="text-xl font-bold text-neutral-300 mb-2">Stationery Store</h4>
-                                <p class="text-neutral-400 mb-4">A modern store with advanced shopping cart and payment
-                                    system capabilities</p>
+                                <h4 class="text-xl font-bold text-neutral-300 mb-2">SERIOUS.BUSINESS
+                                </h4>
+                                <p class="text-neutral-400 mb-4">A simple project to learn how to implement a parallax
+                                    effect using</p>
 
                                 <div class="flex flex-wrap gap-2 mb-4">
                                     <span
-                                        class="px-3 py-1 text-sm bg-neutral-900 rounded-full text-orange-400">React.js</span>
+                                        class="px-3 py-1 text-sm bg-neutral-900 rounded-full text-orange-400">HTML</span>
                                     <span
-                                        class="px-3 py-1 text-sm bg-neutral-900 rounded-full text-orange-400">Next.js</span>
-                                    <span class="px-3 py-1 text-sm bg-neutral-900 rounded-full text-orange-400">Tailwind
-                                        CSS</span>
+                                        class="px-3 py-1 text-sm bg-neutral-900 rounded-full text-orange-400">CSS</span>
+                                    <span class="px-3 py-1 text-sm bg-neutral-900 rounded-full text-orange-400">Java
+                                        Script
+                                    </span>
                                 </div>
 
                                 <a href="https://alisabouri68.github.io/emoji-paralax/" target="_blank"
