--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
                     <!-- Social Icons -->
                     <div class="flex justify-center md:justify-start gap-6 pt-4">
-                        <a href="#" data-tooltip-target="tooltip-instagram"
-                            class="transition-transform hover:scale-110">
+                        <a href="https://www.instagram.com/alies_7568/profilecard/?igsh=MTV6NXZzZDNxdzNreQ=="
+                            data-tooltip-target="tooltip-instagram" class="transition-transform hover:scale-110">
                             <div id="tooltip-instagram" role="tooltip"
                                 class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white bg-neutral-900 rounded-lg shadow-xs opacity-0 tooltip dark:bg-neutral-700">
                                 instagram <div class="tooltip-arrow" data-popper-arrow></div>
@@ -74,7 +74,8 @@
                             <img class="w-8 h-8 md:w-10 md:h-10"
                                 src="assets/img/5296765_camera_instagram_instagram logo_icon.png" alt="Instagram">
                         </a>
-                        <a href="#" data-tooltip-target="tooltip-linkedin" class="transition-transform hover:scale-110">
+                        <a href="https://www.linkedin.com/in/ali-emami-aa9885315?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                            data-tooltip-target="tooltip-linkedin" class="transition-transform hover:scale-110">
                             <div id="tooltip-linkedin" role="tooltip"
                                 class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white bg-neutral-900 rounded-lg shadow-xs opacity-0 tooltip dark:bg-neutral-700">
                                 linkedin <div class="tooltip-arrow" data-popper-arrow></div>
@@ -82,7 +83,8 @@
                             <img class="w-8 h-8 md:w-10 md:h-10"
                                 src="assets/img/5296501_linkedin_network_linkedin logo_icon.png" alt="LinkedIn">
                         </a>
-                        <a href="#" data-tooltip-target="tooltip-github" class="transition-transform hover:scale-110">
+                        <a href="https://github.com/alisabouri68" data-tooltip-target="tooltip-github"
+                            class="transition-transform hover:scale-110">
                             <div id="tooltip-github" role="tooltip"
                                 class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white bg-neutral-900 rounded-lg shadow-xs opacity-0 tooltip dark:bg-neutral-700">
                                 github <div class="tooltip-arrow" data-popper-arrow></div>
