--- a/index.html
+++ b/index.html
@@ -964,15 +964,17 @@
                     <div class="space-y-6">
                         <h4 class="text-orange-500 text-xl font-bold mb-4">Social neteworking</h4>
                         <div class="flex space-x-6">
-                            <a href="#" class="social-icon" data-tooltip="اینستاگرام">
+                            <a href="https://www.instagram.com/alies_7568/profilecard/?igsh=MTV6NXZzZDNxdzNreQ=="
+                                class="social-icon" data-tooltip="instagram">
                                 <img src="assets/img/5296765_camera_instagram_instagram logo_icon.png"
                                     class="w-10 h-10 hover:scale-110 transition-transform" alt="Instagram">
                             </a>
-                            <a href="#" class="social-icon" data-tooltip="لینکدین">
+                            <a href="https://www.linkedin.com/in/ali-emami-aa9885315?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                                class="social-icon" data-tooltip="LinkedIn">
                                 <img src="assets/img/5296501_linkedin_network_linkedin logo_icon.png"
                                     class="w-10 h-10 hover:scale-110 transition-transform" alt="LinkedIn">
                             </a>
-                            <a href="#" class="social-icon" data-tooltip="گیت هاب">
+                            <a href="https://github.com/alisabouri68" class="social-icon" data-tooltip="GitHub">
                                 <img src="assets/img/4745725_code_development_github_open-source_programming_icon.png"
                                     class="w-10 h-10 hover:scale-110 transition-transform" alt="GitHub">
                             </a>
