--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portfolio</title>
 </head>
 
-<body class="bg-[url('./Vector.png')] backdrop-blur-md">
+<body class="bg-[url('./Vector.png')] backdrop-blur-md font-['dosis']">
     <div class="wraper">
         <header class="w-full lg:sticky">
             <div class="container mx-auto">
@@ -121,11 +121,11 @@
                         <!-- Image Section -->
                         <div data-aos="fade-right" class="relative group">
                             <div
-                                class="absolute inset-0 bg-orange-500/20 rounded-full transform group-hover:rotate-12 transition-all duration-500">
+                                class="absolute inset-0 transform group-hover:rotate-12 transition-all duration-500">
                             </div>
                             <figure
-                                class="relative aspect-square rounded-full overflow-hidden shadow-2xl border-4 border-white transform group-hover:scale-105 transition-all duration-300">
-                                <img src="assets/img/1746219314531zazcqd31.png" alt="Ali Emami Sabouri"
+                                class="relative aspect-square  transform group-hover:scale-105 transition-all duration-300">
+                                <img src="assets/img/web.png" alt="Ali Emami Sabouri"
                                     class="w-full h-full neutralscale group-hover:neutralscale-0 transition-all duration-500">
                             </figure>
                         </div>
@@ -729,7 +729,7 @@
                                     <div class="relative">
                                         <input type="text" id="name" required
                                             class="w-full px-4 py-3 border border-neutral-600 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500 bg-neutral-700 text-neutral-300 transition-all"
-                                            placeholder="علی امامی صبوری">
+                                            placeholder="Ali Emami Sabouri">
                                         <svg class="absolute right-3 top-3.5 w-5 h-5 text-neutral-400" fill="none"
                                             stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -985,10 +985,9 @@
                 <!-- Copyright -->
                 <div class="border-t border-orange-500/20 pt-8 text-center">
                     <p class="text-sm text-orange-500/80">
-                        © 2024 طراحی و توسعه توسط علی امامی صبوری
-                        <span class="mx-2">•</span>
-                        کلیه حقوق محفوظ است
-                    </p>
+                        © 2025 Designed and developed by Ali Emami Sabouri
+                         <span class="mx-2">•</span>
+                         All rights reserved                    </p>
                 </div>
             </div>
         </footer>
